--- a/branding_services.html
+++ b/branding_services.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./style_branding.css">
+    <!-- <link rel="stylesheet" href="./style_branding.css"> -->
+    <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <title>Branding Services</title>
 </head>
 <body>
-    <header class="header">
-        <section class="header-top">
+    <header class="header-land-services">
+        <section class="header-land-about-one-services">
             <a href="#" class="header-logo logo"> 
                 <img src="./images/logo-small.png" class="logo__img" alt="Increase - веб-агенство">
             </a>
@@ -36,17 +37,17 @@
             <a href="tel:+79780000000" class="header-phone">+7 (978) 000-00-00</a>
         </section>
     </header>
-        <section class="services-branding">
-            <div class="container">
+        <section class="service-about">
+            <div class="container container-service-about">
                 <span class="design_choice">Сделайте правильный выбор дизайна</span>
                 <div class="wrapper">
-                    <div class="branding">
+                    <div class="service">
                         <div class="wrapper-services">
                             <span class="services-name">Брендинг</span>
-                            <span class="slogan">Имидж и отличительная черта вашего бизнеса</span>
+                            <span class="service-slogan">Имидж и отличительная черта вашего бизнеса</span>
                         </div>
-                        <img  class="branding-smal-img" src="images/branding-smal-img.png">
-                        <button class="btn-more-branding">Подробнее</button>
+                        <img  class="service-smal-img" src="images/branding-smal-img.png">
+                        <button class="btn-more-service">Подробнее</button>
                     </div>
                     <div class="wrapper-right">
                         <ul class="services-lists">
@@ -55,12 +56,12 @@
                             <li class="services-name services-items"><a href="#" class="services-list-link">Рекламный креатив</a</li>
                             <li class="services-name services-items "><a href="#" class="services-list-link">Ui / Ux дизайн</a></li>
                         </ul>
-                        <div class="about-branding">
-                                <div class="about-brandoing-info">
-                                    <div class="wrapper-branding-info">
-                                        <span class="about-brandoing-info-title">Брендинг</span>
-                                        <span class="about-brandoing-info-slogan">Имидж и отличительная черта вашего бизнеса</span>
-                                        <div class="about-brandoing-info-we-top">Мы знаем как сделать ваш бренд популярным</div>
+                        <div class="sml-info-service">
+                                <div class="sml-info-service-text">
+                                    <div class="wrapper-sml-info-service">
+                                        <span class="sml-info-service-title">Брендинг</span>
+                                        <span class="sml-info-service-slogan">Имидж и отличительная черта вашего бизнеса</span>
+                                        <div class="sml-info-service-we-top">Мы знаем как сделать ваш бренд популярным</div>
                                     </div>
                                     <button class="cost">Узнать стоимость</button>
                                 </div>
@@ -70,28 +71,40 @@
                 </div>
             </div>
         </section>
-        <section class="info-about-services">
-            <div class="container container-info-about">
+        <section class="big-info-service">
+            <div class="container container-big-info-service">
                 <div class="services-this">
-                    <div class="wrapper-services-this">
-                        <span class="services-this-text">Брендинг - это</span>
-                        <span class="services-this-definition">Формирование образа в глазах портребителя</span>
+                    <div class="wrapper-service-this">
+                        <span class="service-this-text">Брендинг - это</span>
+                        <span class="service-this-definition">Формирование образа в глазах портребителя</span>
                     </div>
                     <button class="show-cases">Показать наши кейсы</button>
                 </div>
-                <img class="info-services-img" src="images/fon-info-services.png">
+                <img class="info-service-img" src="images/fon-info-services.png">
                 <div class="services-why">
-                    <span class="services-why-text">Брендинг нужен:</span>
-                    <ul class="services-why-list">
-                        <li class="services-why-items"><p class="services-why-items-text">Финансы</p></li>
-                        <li class="services-why-items"><p class="services-why-items-text">Услуги</p></li>
-                        <li class="services-why-items"><p class="services-why-items-text">Путишествия</p></li>
-                        <li class="services-why-items"><p class="services-why-items-text">Питание и продукты</p></li>
-                        <li class="services-why-items"><p class="services-why-items-text">Красос и здоровье</p></li>
+                    <span class="service-why-text">Брендинг нужен:</span>
+                    <ul class="service-why-list">
+                        <li class="service-why-items"><p class="service-why-items-text">Финансы</p></li>
+                        <li class="service-why-items"><p class="service-why-items-text">Услуги</p></li>
+                        <li class="service-why-items"><p class="service-why-items-text">Путишествия</p></li>
+                        <li class="service-why-items"><p class="service-why-items-text">Питание и продукты</p></li>
+                        <li class="service-why-items"><p class="service-why-items-text">Красос и здоровье</p></li>
                     </ul>
                 </div>
                 
             </div>
+        </section>
+        <section class="how-affect">
+            <div class="container">
+                <div class="bad-affect">
+
+                </div>
+                <div class="good-affect">
+
+                </div>
+            </div>
+
+
         </section>
 
     
