--- a/branding_services.html
+++ b/branding_services.html
@@ -95,16 +95,60 @@
             </div>
         </section>
         <section class="how-affect">
-            <div class="container">
-                <div class="bad-affect">
-
-                </div>
-                <div class="good-affect">
-
+            <div class="container container-how-affect">
+                <span class="how-affect-text">Как брендинг влияет на имидж компании:</span>
+                <div class="wrapper-affect">
+                    <div class="bad-affect">
+                        <span class="bad-affect-text">Слабый бренд</span>
+                        <ul class="bad-affect-list">
+                            <li class="bad-affect-item"><p>Привлечение внимания</p><img src="images/branding-diagramm-1.png"></li>
+                            <li class="bad-affect-item"><p>Доверие, лояльность</p><img src="images/branding-diagramm-2.png"></li>
+                        </ul>
+                    </div>
+                    <div class="good-affect">
+                        <span class="good-affect-text">Сильный бренд</span>
+                        <ul class="good-affect-list">
+                            <li class="good-affect-item"><p>Привлечение внимания</p><img src="images/branding-diagramm-3.png"></li>
+                            <li class="good-affect-item"><p>Доверие, лояльность</p><img src="images/branding-diagramm-4.png"></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
-
-
+        </section>
+        <section class="dev-stage">
+            <div class="container container-dev-stage">
+                <div class="wrapper-title">
+                    <span class="dev-stage-title">Этапы разработки вашего бренда</span>
+                    <span class="dev-stage-sub-title">Процесс разработки включает в себя несколько важных этапов.</span>
+                </div>
+                <ul class="dev-stage-list">
+                    <li class="dev-stage-items"><img class="decor" src="images/left-dev-stage.png" width="40px" height="40px"><span class="number-dev-stage">1</span><p class="dev-stage-text">Комплексный анализ</p></li>
+                    <li class="dev-stage-items"><span class="number-dev-stage">2</span><p class="dev-stage-text">Составляющие брендинга</p></li>
+                    <li class="dev-stage-items"><span class="number-dev-stage">3</span><p class="dev-stage-text">Разработка бренда</p></li>
+                    <li class="dev-stage-items"><span class="number-dev-stage">4</span><p class="dev-stage-text">Презентация клиенту</p></li>
+                </ul>
+            </div>
+        </section>
+        <section class="complex-analysis">
+            <div class="container container-complex-analysis">
+                <div class="wrapper-analysis-title">
+                    <span class="analysis-title">Комплексный анализ</span>
+                    <span class="analysis-sub-title">Ваш торговый знак должен быть актуальным</span>
+                    <span class="analysis-text">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов.</span>
+                    </div>
+                <ul class="analysis-list">
+                    <li class="analysis-item"><img class="analysis-item-check" src="images/check.png"><p class="analysis-item-text">Портрет клиента</p></li>
+                    <li class="analysis-item"><img class="analysis-item-check" src="images/check.png"><p class="analysis-item-text">Карта репутации</p></li>
+                    <li class="analysis-item"><img class="analysis-item-check" src="images/check.png"><p class="analysis-item-text">Фокус группа</p></li>
+                    <li class="analysis-item"><img class="analysis-item-check" src="images/check.png"><p class="analysis-item-text">Систематизируем данные</p></li>
+                </ul>
+                <ul class="analysis-list">
+                    <li class="analysis-item"><img class="analysis-item-check" src="images/check.png"><p class="analysis-item-text">Портрет клиента</p></li>
+                    <li class="analysis-item"><img class="analysis-item-check" src="images/check.png"><p class="analysis-item-text">Карта репутации</p></li>
+                    <li class="analysis-item"><img class="analysis-item-check" src="images/check.png"><p class="analysis-item-text">Фокус группа</p></li>
+                    <li class="analysis-item"><img class="analysis-item-check" src="images/check.png"><p class="analysis-item-text">Систематизируем данные</p></li>
+                </ul>
+            </div>
         </section>
 
     
