Добавил страницу Услуги Сайт

--- a/branding_services.html
+++ b/branding_services.html
@@ -83,7 +83,7 @@
                     <button class="show-cases">Показать наши кейсы</button>
                 </div>
                 <img class="info-service-img" src="images/fon-info-services.png">
-                <div class="services-why">
+                <div class="service-why">
                     <span class="service-why-text">Брендинг нужен:</span>
                     <ul class="service-why-list">
                         <li class="service-why-items"><p class="service-why-items-text">Финансы</p></li>
@@ -145,11 +145,11 @@
                     <li class="analysis-item"><p class="analysis-item-text">Фокус группа</p></li>
                     <li class="analysis-item"><p class="analysis-item-text">Систематизируем данные</p></li>
                 </ul>
-                <ul class="analysis-list">
-                    <li class="analysis-item"><p class="analysis-item-text">Портрет клиента</p></li>
-                    <li class="analysis-item"><p class="analysis-item-text">Карта репутации</p></li>
-                    <li class="analysis-item"><p class="analysis-item-text">Фокус группа</p></li>
-                    <li class="analysis-item"><p class="analysis-item-text">Систематизируем данные</p></li>
+                <ul class="analysis-list ">
+                    <li class="analysis-item analysis-item-right"><p class="analysis-item-text">Портрет клиента</p></li>
+                    <li class="analysis-item analysis-item-right"><p class="analysis-item-text">Карта репутации</p></li>
+                    <li class="analysis-item analysis-item-right"><p class="analysis-item-text">Фокус группа</p></li>
+                    <li class="analysis-item analysis-item-right"><p class="analysis-item-text">Систематизируем данные</p></li>
                 </ul>
             </div>
         </section>
