Добавил страницу Услуги Реклама

--- a/service-advertising.html
+++ b/service-advertising.html
@@ -40,190 +40,46 @@
         <div class="container container-service-about">
             <span class="design_choice">Сделайте правильный выбор дизайна</span>
             <div class="wrapper">
-                <div class="service">
+                <div class="service service-advertising">
                     <div class="wrapper-services">
-                        <span class="services-name">Логотип</span>
-                        <span class="service-slogan">Ваш фирменый знак</span>
+                        <span class="services-name">Рекламный креатив</span>
                     </div>
-                    <img  class="service-smal-img" src="images/service-logo-small-img.png">
-                    <button class="btn-more-service">Подробнее</button>
+                    <!-- <img  class="service-smal-img" src="images/service-advertising-small-img.png"> -->
+                    <button class="btn-more-service btn-service-advertising">Подробнее</button>
                 </div>
                 <div class="wrapper-right">
                     <ul class="services-lists">
-                        <li class="services-name services-items"><a href="#" class="services-list-link">Упаковка</a></li>
                         <li class="services-name services-items"><a href="#" class="services-list-link">Брендинг</a></li>
+                        <li class="services-name services-items"><a href="#" class="services-list-link">Логотип</a></li>
                         <li class="services-name services-items"><a href="#" class="services-list-link">Рекламный креатив</a</li>
                         <li class="services-name services-items "><a href="#" class="services-list-link">Ui / Ux дизайн</a></li>
                     </ul>
                     <div class="sml-info-service">
                             <div class="sml-info-service-text">
                                 <div class="wrapper-sml-info-service">
-                                    <span class="sml-info-service-title">Логотип</span>
-                                    <span class="sml-info-service-slogan">Ваш фирменый знак</span>
-                                    <div class="sml-info-service-we-top service-logo-we-top">Один из самых важных элементов в формировании бренда.</div>
+                                    <span class="sml-info-service-title">Рекламный креатив</span>
+                                    <div class="sml-info-service-we-top service-logo-we-top">Покупатель не сможет остаться равнодушным.</div>
                                 </div>
                                 <button class="cost">Узнать стоимость</button>
                             </div>
-                            <img class="service-logo-big-img" src="images/service-logo-big-img.png">
+                            <img class="service-logo-big-img" src="images/service-advertising-big-img.png">
                     </div>
                 </div>
             </div>
         </div>
-    <img src="./images/our-projects-blot-2.png" class="service-about__paroller-1" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
     </section>
-    <section class="big-info-service">
-        <div class="container container-big-info-service">
-            <div class="services-this">
-                <div class="wrapper-service-this">
-                    <span class="service-this-text">Логотип - это</span>
-                    <span class="service-this-definition">эмблема или символ торговой марки.</span>
-                </div>
-                <button class="show-cases">Показать наши кейсы</button>
-            </div>
-            <img class="info-service-img service-logo__info-service-img" src="images/fon-info-services-2.png">
-            <div class="service-why">
-                <span class="service-why-text">Варианты логотипов:</span>
-                <ul class="service-why-list">
-                    <li class="service-why-items"><p class="service-why-items-text">Шрифтовый</p></li>
-                    <li class="service-why-items"><p class="service-why-items-text">Леттеринг</p></li>
-                    <li class="service-why-items"><p class="service-why-items-text">Эмблема</p></li>
-                    <li class="service-why-items"><p class="service-why-items-text">Комбинированный</p></li>
-                </ul>
-            </div>
+    <section class="case">
+        <div class="container-case">
+            <h3 class="case-title"><p style="width: 311px">Примеры наших кейсов</p></h3>
+            <img class="case-img" src="images/case-1.png">
         </div>
-    </section>
-    <section class="how-affect">
-        <img src="./images/big-info-blot-1.png" class="big-info__paroller-1" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
-        <div class="container container-how-affect">
-            <span class="how-affect-text">Как логотип влияет на имидж компании:</span>
-            <div class="wrapper-affect">
-                <div class="bad-affect">
-                    <span class="bad-affect-text">Бренд без лого</span>
-                    <ul class="bad-affect-list">
-                        <li class="bad-affect-item"><p>Идентификация компании</p><img src="images/branding-diagramm-2.png"></li>
-                        <li class="bad-affect-item"><p>Доверие клиентов</p><img src="images/branding-diagramm-1.png"></li>
-                        <li class="bad-affect-item"><p>Идентификация компании</p><img src="images/branding-diagramm-2.png"></li>
-                    </ul>
-                </div>
-                <div class="bad-affect">
-                    <span class="bad-affect-text">Бренд со старым логотипом</span>
-                    <ul class="bad-affect-list">
-                        <li class="bad-affect-item"><p>Идентификация компании</p><img src="images/branding-diagramm-2.png"></li>
-                        <li class="bad-affect-item"><p>Доверие клиентов</p><img src="images/branding-diagramm-1.png"></li>
-                        <li class="bad-affect-item"><p>Идентификация компании</p><img src="images/branding-diagramm-2.png"></li>
-                    </ul>
-                </div>
-                <div class="good-affect">
-                    <span class="good-affect-text">Бренд с хорошим логотипом</span>
-                    <ul class="good-affect-list">
-                        <li class="good-affect-item"><p>Идентификация компании</p><img src="images/branding-diagramm-3.png"></li>
-                        <li class="good-affect-item"><p>Доверие клиентов</p><img src="images/branding-diagramm-4.png"></li>
-                        <li class="good-affect-item"><p>Идентификация компании</p><img src="images/branding-diagramm-3.png"></li>
-                    </ul>
-                </div>
-            </div>
+        <div class="container-case">
+            <img class="case-img" src="images/case-2.png">
+            <img class="case-img" src="images/case-3.png">
         </div>
-    </section>
-    <section class="dev-stage">
-        <div class="container container-dev-stage">
-            <div class="wrapper-title">
-                <span class="dev-stage-title">Этапы разработки вашего логотипа</span>
-                <span class="dev-stage-sub-title">Процесс разработки включает в себя несколько важных этапов.</span>
-            </div>
-            <ul class="dev-stage-list">
-                <li class="dev-stage-items"><span class="number-dev-stage">1</span><p class="dev-stage-text">Комплексный анализ</p></li>
-                <li class="dev-stage-items"><span class="number-dev-stage">2</span><p class="dev-stage-text">Формирование концепта</p></li>
-                <li class="dev-stage-items"><span class="number-dev-stage">3</span><p class="dev-stage-text">Финальная проработка</p></li>
-                <li class="dev-stage-items"><span class="number-dev-stage">4</span><p class="dev-stage-text">Презентация клиенту</p></li>
-            </ul>
-        </div>
-        <img src="./images/dev-stage-blot-1.png" class="dev-stage__paroller-2" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
-    </section>
-    <section class="complex-analysis">
-        <div class="container container-complex-analysis">
-            <div class="wrapper-analysis-title">
-                <span class="analysis-title">Комплексный анализ</span>
-                <span class="analysis-sub-title">Ваш торговый знак должен быть актуальным</span>
-                <span class="analysis-text">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов.</span>
-                </div>
-            <ul class="analysis-list">
-                <li class="analysis-item"><p class="analysis-item-text">Портрет клиента</p></li>
-                <li class="analysis-item"><p class="analysis-item-text">Карта репутации</p></li>
-                <li class="analysis-item"><p class="analysis-item-text">Фокус группа</p></li>
-                <li class="analysis-item"><p class="analysis-item-text">Систематизируем данные</p></li>
-            </ul>
-            <ul class="analysis-list ">
-                <li class="analysis-item analysis-item-right"><p class="analysis-item-text">Портрет клиента</p></li>
-                <li class="analysis-item analysis-item-right"><p class="analysis-item-text">Карта репутации</p></li>
-                <li class="analysis-item analysis-item-right"><p class="analysis-item-text">Фокус группа</p></li>
-                 <li class="analysis-item analysis-item-right"><p class="analysis-item-text">Систематизируем данные</p></li>
-            </ul>
-        </div>
-    </section>
-    <section class="logo-concept">
-        <div class="container container-logo-concept">
-            <div class="wrapper-logo-concept-text">
-                <h3 class="logo-concept-title">Формирование концепции логотипа</h3>
-                <span class="logo-concept-sub-title">Процесс разработки включает в себя несколько важных этапов.</span>
-                <ul class="logo-concept-list">
-                    <li class="logo-concept-item"><p class="logo-concept-text">Развитие концепции</p></li>
-                    <li class="logo-concept-item"><p class="logo-concept-text">Работа над эскизами</p></li>
-                    <li class="logo-concept-item"><p class="logo-concept-text">Определение шрифтовой части и дескриптора</p></li>
-                    <li class="logo-concept-item"><p class="logo-concept-text">Формирование цветовых схем</p></li>
-                    <li class="logo-concept-item"><p class="logo-concept-text">Выбор подходящих вариантов</p></li>
-                </ul>
-            </div>
-            <img class="logo-concept-img" src="images/logo-concept-img.png">
-        </div>
-    </section>
-    <section class="final-work-logo">
-    <img src="./images/free-audit-blot.png" class="final-work-logo__paroller-1" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">    
-        <div class="container">
-            <div class="contaoner-final-work-logo">
-                <h3 class="final-work-logo-title">Финальная проработка логотипа и визуализации</h3>
-                <span class="final-work-logo-sub-title">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий </span>
-            </div>
-        </div>
-    </section>
-    <section class="logo-processing">
-        <div class="container container-logo-processing">
-            <h3 class="logo-processing-title">Логотип до и после</h3>
-            <span class="logo-processing-sub-title">Редизайн</span>
-            <div class="wrapper-logo-processing">
-                <div class="logo-processing-ex">
-                    <div class="logo-before">
-                        <img class="logo-before-img" src="images/logo-before-1.png">
-                        <span class="logo-bottom-text">Старый логотип</span>
-                    </div>
-                    <div class="logo-after">
-                        <img class="logo-after-img" src="images/logo-after-1.png">
-                        <span class="logo-bottom-text">Новый лого</span>
-                    </div>
-                    <span class="logo-processing-text">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. </span>
-                </div>
-                <div class="logo-processing-ex">
-                    <div class="logo-before">
-                        <img class="logo-before-img" src="images/logo-before-2.png">
-                        <span class="logo-bottom-text">Старый логотип</span>
-                    </div>
-                    <div class="logo-after">
-                        <img class="logo-after-img" src="images/logo-after-2.png">
-                        <span class="logo-bottom-text">Новый лого</span>
-                    </div>
-                    <span class="logo-processing-text">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. </span>
-                </div>
-                <div class="logo-processing-ex">
-                    <div class="logo-before">
-                        <img class="logo-before-img" src="images/logo-before-3.png">
-                        <span class="logo-bottom-text">Старый логотип</span>
-                    </div>
-                    <div class="logo-after">
-                        <img class="logo-after-img" src="images/logo-after-3.png">
-                        <span class="logo-bottom-text">Новый лого</span>
-                    </div>
-                    <span class="logo-processing-text">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. </span>
-                </div>
-            </div>
+        <div class="container-case">
+            <img class="case-img" src="images/case-4.png">
+            <img class="case-img" src="images/case-5.png">
         </div>
     </section>
     <section class="price">
@@ -346,9 +202,10 @@
     </div>
     </footer>
     
+
 <script src="./js/jquery-3.4.1.min.js"></script>
 <script src="./js/jquery.paroller.min.js"></script>
 <script defer type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-<script defer src="./main.js"></script>    
+<script defer src="./main.js"></script> 
 </body>
 </html>
