slick в локально папке

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Incr</title>
     <meta name="description" content="Increase digital-продукты для лидеров рынка"/>
     <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="css/slick.css"/>
 </head>
 <body>
     <header class="header">
@@ -492,7 +492,7 @@
     
     <script src="./js/jquery-3.4.1.min.js"></script>
     <script src="./js/jquery.paroller.min.js"></script>
-    <script defer type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script defer type="text/javascript" src="js/slick.min.js"></script>
     <script defer src="./main.js"></script>
 </body>
 </html>
