--- a/branding_services.html
+++ b/branding_services.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <!-- <link rel="stylesheet" href="./style_branding.css"> -->
     <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="css/slick.css"/>
     <title>Branding Services</title>
 </head>
 <body>
@@ -337,7 +336,7 @@
 
     <script src="./js/jquery-3.4.1.min.js"></script>
     <script src="./js/jquery.paroller.min.js"></script>
-    <script defer type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script defer type="text/javascript" src="js/slick.min.js"></script>
     <script defer src="./main.js"></script>    
 </body>
 </html>
