--- a/service-logo.html
+++ b/service-logo.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="css/slick.css"/>
     <link rel="stylesheet" href="./style.css">
     <title>Document</title>
 </head>
@@ -348,7 +349,7 @@
     
 <script src="./js/jquery-3.4.1.min.js"></script>
 <script src="./js/jquery.paroller.min.js"></script>
-<script defer type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+<script defer type="text/javascript" src="js/slick.min.js"></script>
 <script defer src="./main.js"></script>    
 </body>
 </html>
