--- a/service-pack.html
+++ b/service-pack.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    \<link rel="stylesheet" type="text/css" href="css/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="css/slick.css"/>
     <link rel="stylesheet" href="./style.css">
     <title>Document</title>
 </head>
@@ -65,7 +65,7 @@
                                 </div>
                                 <button class="cost">Узнать стоимость</button>
                             </div>
-                            <img class="service-logo-big-img" src="images/service-pack-big-img.png">
+                            <img class="service-logo-big-img service-pack-big-img" src="images/service-pack-big-img.png">
                     </div>
                 </div>
             </div>
@@ -146,7 +146,7 @@
                 <span class="mommyjob-sub-title">Нужно в среднем покупателю,чтобы сформировать первое впечатление о продукте</span>
                 <button class="mommyjob-bnt">проект MOMMYJOY</button>
             </div>
-            <img class="mommyjob-img" src="images/mommyjob-img.png">
+            <!-- <img class="mommyjob-img" src="images/mommyjob-img.png"> -->
         </div>
         <img src="./images/dev-stage-blot-1.png" class="mommyjob__paroller-1" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
         <img src="./images/site-blot-1.png" class="mommyjob__paroller-2" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
@@ -157,7 +157,7 @@
                 <h3 class="present-client-title">Презентация клиенту</h3>
                 <span class="present-client-text">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов.</span>
             </div>
-            <img class="present-client-img" src="">
+            <!-- <img class="present-client-img" src=""> -->
 
         </div>
     </section>
