Добавил страницу SEO

--- a/web-site.html
+++ b/web-site.html
@@ -41,7 +41,7 @@
             <img src="./images/site-blot-1.png" class="header__paroller-2" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
         <div class="container container-small-info-service">
             <div class="small-info-service-about">
-                <h3 class="smal-info0service-title">Веб-сайты</h3>
+                <h3 class="smal-info-service-title">Веб-сайты</h3>
                 <span class="small-info-service-cub-title">Digital-сервис<br>для вашего бизнесса</span>
                 <span class="small-info-service-text">Простые и эффективные решения <br> для сложных систем</span>
             </div>
