--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
         <img src="./images/our-projects-blot-1.png" class="projects__paroller-1" data-paroller-factor="0.15" aria-hidden="true" alt="">
         <img src="./images/our-projects-blot-2.png" class="projects__paroller-2" data-paroller-factor="0.35" aria-hidden="true" alt="">
 
-        <div class="container wrapper">
+        <div class="container wrapper-project">
             <h2 class="section-title projects__title">Наши работы</h2>
             <div class="wrapper-switch"><button class="switch switch-back"> < </button>
                 <button class="switch switch-forward"> > </button>
