--- a/smm.html
+++ b/smm.html
@@ -125,7 +125,7 @@
 <section class="dev-stage-smm">
     <div class="container container-dev-stage">
         <div class="wrapper-title">
-            <span class="dev-stage-title">Как мы работаем</span>
+            <span class="dev-stage-title dev-stage-title-seo">Как мы работаем</span>
         </div>
         <ul class="dev-stage-list dev-stage-list-seo">
             <li class="dev-stage-items dev-stage-items-smm"><span class="number-dev-stage">1</span><p class="dev-stage-text">Технический анализ</p>
